# notehub

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  nohup.out  package.json  sample-project.md  tailwind.config.ts  vite.config.ts
.claude/commands/: ci.md  commit.md  ship.md
.github/workflows/: ci.yml
public/: sample-project.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  recent_docs.rs  recovery.rs  terminal.rs  watcher.rs
src/components/: CLAUDE.md  CommandPalette.tsx  ConfirmModal.tsx  ConflictModal.tsx  ContextMenu.tsx  DocumentView.tsx  FileTree.tsx  GoToHeading.tsx  KeybindingsHelp.tsx  MarkdownEditor.tsx  MarkdownWysiwyg.tsx  MenuBar.tsx  OutlinePanel.tsx  ProjectNotes.tsx  QaFindBar.tsx  QaLayout.tsx  QuickOpen.tsx  RawFileEditor.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TaskDetailDrawer.tsx  TaskTable.tsx  TerminalPanel.tsx  TerminalView.tsx  ThemeIcon.tsx  Toolbar.tsx  WelcomePane.tsx
src/components/__tests__/: CommandPalette.test.tsx  DocumentView.outline.test.tsx  DocumentView.stats.test.tsx  DocumentView.test.tsx  GoToHeading.test.tsx  MarkdownEditor.test.tsx  OutlinePanel.test.tsx  QaFindBar.test.tsx  QaLayout.find.test.tsx  QaLayout.perf.test.tsx  QaLayout.reload.test.tsx  QaLayout.test.tsx  Sidebar.test.tsx  StatusBar.test.tsx  TabBar.test.tsx  Toolbar.test.tsx  WelcomePane.test.tsx
src/components/cell-editors/: DatePickerEditor.tsx  SelectEditor.tsx  TagsEditor.tsx
src/components/cell-renderers/: ActionCellRenderer.tsx  AssigneeCellRenderer.tsx  DateCellRenderer.tsx  PriorityCellRenderer.tsx  StatusCellRenderer.tsx  TagsCellRenderer.tsx  TitleCellRenderer.tsx  UrlCellRenderer.tsx
src/hooks/: useAutoUpdate.ts  useClickOutside.ts  useDarkMode.ts  useFileIndex.ts  useFileSync.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useNativeMenu.ts  useProjectFile.ts  useRawFile.ts  useRecovery.ts  useTabManagement.ts  useTaskFilters.ts  useUndoHistory.ts  useViewMode.ts  useWorkspace.ts
src/hooks/__tests__/: useFileSync.test.ts  useNativeMenu.test.ts  useProjectFile.test.ts  useRawFile.test.ts  useTabManagement.test.ts  (+2 more)
src/lib/: doc-stats.ts  file-kind.ts  fuzzy.ts  image-assets.ts  markdown-parser.ts  milkdown-code-language.ts  milkdown-image-paste.ts  milkdown-mermaid.ts  outline.ts  pm-plain-paste.ts  print.ts  qa-find.ts  qa-parser.ts  recent-files.ts  scroll-sync.ts  tags.ts  tauri-api.ts  tear-off.ts  tree-refresh.ts  tree.ts  types.ts
src/styles/: globals.css
(+35 files in other folders)
