[package]
name = "notehub"
version = "0.1.0"
description = "Markdown-Driven Project Management Editor"
authors = ["NoteHub"]
edition = "2021"

[lib]
name = "notehub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["full"] }
