[package]
name = "notehub"
version = "0.1.0"
description = "Markdown-Driven Project Management Editor"
authors = ["NoteHub"]
edition = "2021"

[lib]
name = "notehub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-full = "0.4"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
ignore = "0.4"
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSDocumentController"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL"] }
# Native clipboard read (Cmd+Shift+V paste-as-plain-text). macOS-only so Linux CI needs no X11
# dev headers; reading via the OS avoids WKWebView's "Paste" permission button that
# `navigator.clipboard.readText()` triggers. See commands::read_clipboard_text.
arboard = "3"
